--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
-    background-color: #f0f5f9; /* Light blue background color */
+    background-color: #f0f5f0; /* Light blue background color */
     color: #333; /* Text color */
-    font-family: Arial, sans-serif;
+    font-family: 'Times New Roman', Times, serif;
     margin: 0;
     padding: 0;
 }
