--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,10 @@
-.App {
+.App * {
   text-align: center;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
 .App-logo {
-  height: 40vmin;
+  height: 20vmin;
   pointer-events: none;
 }
 
@@ -14,8 +15,10 @@
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  background-image: url("./assets/headerBackground.png");
+  background-size: 100%;
+  background-position: 0px 650px;
+  min-height: 30vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -23,11 +26,25 @@
   font-size: calc(10px + 2vmin);
   color: white;
 }
+.App-header-text {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
+  font-family: Arial, Helvetica, sans-serif;
+}
 
 .App-link {
   color: #61dafb;
 }
 
+.contact {
+  text-align: center;
+  font-size: 20px;
+  margin: 50px;;
+}
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
